# VFileX

./: .gitignore  .qmlls.ini  Cargo.toml  README.md  build.rs  resources.qrc  supervtf.desktop
.github/workflows/: build.yml
cpp/: helpers.h
qml/: AboutDialog.qml  AddParameterDialog.qml  AppMenuBar.qml  ColorPickerDialog.qml  ImageToVtfDialog.qml  Main.qml  NewMaterialDialog.qml  ParameterDelegate.qml  ParameterItemDelegate.qml  PreviewPane.qml  TextureBrowser.qml  ThemeColors.js  ThemedIcon.qml  WelcomeDialog.qml  qmldir
resources/themes/: ClassicSteam.toml  Default.toml  Dracula.toml  Light.toml  Monokai.toml
src/: main.rs  vpk_archive.rs
src/bridge/: application.rs  image_provider.rs  material_model.rs  mod.rs  qt_helpers.rs
src/schema/: definitions.rs  mod.rs
src/vmt/: mod.rs  parser.rs  serializer.rs
src/vtf/: decoder.rs  formats.rs  header.rs  mod.rs
