[package]
name = "VFileX"
version = "0.8.3"
edition = "2024"
build = "build.rs"
authors = ["JuiceyDev","Olxgs"]
description = "A high-speed, cross-platform editor for Valve Material (.VMT) files"
license = "MIT"
repository = "https://github.com/create-juicey-app/VFileX"

[dependencies]
cxx = "1.0"
cxx-qt = "0.7"
cxx-qt-lib = { version = "0.7", features = ["qt_full"] }
keyvalues-parser = "0.2"
keyvalues-serde = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = "0.25"
byteorder = "1.5"
thiserror = "2.0"
bitflags = "2.6"
toml = "0.8"
anyhow = "1.0"
once_cell = "1.20"
dirs = "5.0"
vpk = "0.3"
rfd = "0.15"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"

[build-dependencies]
cxx-qt-build = "0.7"

[[bin]]
name = "VFileX"
path = "src/main.rs"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

