[package]
name = "VFileX"
version = "0.8.8"
edition = "2024"
build = "build.rs"
authors = ["JuiceyDev","Olxgs"]
description = "A high-speed, cross-platform editor for Valve Material (.VMT) files"
license = "MIT"
repository = "https://github.com/create-juicey-app/VFileX"

[dependencies]
cxx = "=1.0.190"
cxx-qt = "0.8.1"
cxx-qt-lib = { version = "0.8.1", features = ["qt_full"] }
keyvalues-parser = "0.2.3"
keyvalues-serde = "0.2.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
image = "0.25"
byteorder = "1.5"
thiserror = "2.0.18"
bitflags = "2.11.0"
toml = "0.9.8"
anyhow = "1.0.102"
once_cell = "1.20"
dirs = "6.0.0"
vpk = "0.3"
rfd = "0.17.2"

[target.'cfg(windows)'.dependencies]
winreg = "0.55.0"

[build-dependencies]
cxx-qt-build = "0.8.1"
cc = "1.0"

[[bin]]
name = "VFileX"
path = "src/main.rs"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

